footer overlap fix

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -4,14 +4,14 @@ background: #E5E5E5;
 position: relative;
 } */
 
-.footer span {
+/* .footer span {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     padding: 3px;
     background: #5D585C;
-}
+} */
 
 body {
     min-height: 100vh;
@@ -19,6 +19,8 @@ body {
     margin: 0;
     padding-bottom: 100px; 
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 }
 
 footer {
